INTYGFV-16453: Removed internal related classes for PDF. Added patient to request. Added validation for patient and additionalInfoText from request.